nivasa-macros/tests/trybuild/graphql_interceptor_requires_arg.rs
use nivasa_macros::{interceptor, resolver};

struct GraphqlGateway;

impl GraphqlGateway {
    #[interceptor()]
    #[resolver("users")]
    fn users(&self) {}
}

fn main() {}
